
## 20211012
* Importscript: TeamSync gebruikt beveiligingsprotocol TLS versie 1.2, in overeenstemming met het stoppen van ondersteuning van oudere onveilige beveiligingsprotocollen TLS 1.1 of ouder in Magister SOAP Webservices vanaf 18 okt 2021. 

## 20211019
* Documentatie vermeld in bekende tekortkomingen een geval waarin de onjuiste vakomschrijving in de team-weergavenaam wordt geplaatst en een workaround. 

## 20211125
* Foute HelpMessage gecorrigeerd
* Exportscript: cosmetische verbetering; voorkom dubbele woorden in teamnaam, wanneer vakcode gelijk is aan vakomschrijving

## 20220506 
* Toegevoegd in handleiding: vereiste Windows PowerShell 5
* Toegevoegd in handleiding: Tips en trucs: SDS Flow Connector en CSV file synchronisatie automatiseren

## 20220701
* Eerste release v1.0.0 op GitHub. Waarom heb ik dat niet eerder gedaan?

## 20220718
* Export-SchoolDataSync.ps1: snelheidsverhoging door gebruik van arraylists. Typische uitvoertijd is nu 30 seconden.
* Export-SchoolDataSync.ps1: teams bepaald door harde match van docentgroepvak met leerling-lesgroep/klas. Dit werkt eenvoudiger, betrouwbaarder en sneller.
* Export-SchoolDataSync.ps1: configuratieparameter bon_match_docentlesgroep_aan_leerlingklas is overbodig geworden.

## 20220719
* Export-SchoolDataSync.ps1: bugfix: uitvoer leeg, want vergat tabel teamactief aan te maken.

## TO DO
Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).

* SDS V2 format 
* parameter viewonly toont resultaat.
* controleer omgang met ongeldige tekens, https://support.microsoft.com/en-us/office/invalid-file-names-and-file-types-in-onedrive-and-sharepoint-64883a5d-228e-48f5-b3d2-eb39e07630fa?ui=en-us&rs=en-us&ad=us#invalidcharacters
* configuratievariabele toevoegen om het toevoegen van de vakomschrijving aan de teamnaam facultatief te maken.
* configuratievariabelen moeten in een eigen structuur worden bewaard.